--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+.par1{
+	color:#00f;
+	background-color:#eee;
+	font-family: Arial;
+	font-size: 20px;
+}
+/* p:nth-child(even){
+	
+} */
